@@ -1,6 +1,6 @@
-ops==1.3.0
+ops==2.*
 influxdb==5.3.1
 urllib3==1.26.9
 etcd3gw==1.0.2
 jinja2==3.1.2
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.8.15
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.8.16
