@@ -1,2 +1,2 @@
-ops==1.3.0
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.8.15
+ops==2.*
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.8.16
